[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "jax_ops_counter"
dynamic = ["description"]
version = "0.1.0"
authors = [{name = "John Connolly", email = "john.will.connolly@gmail.com"}]
license = {file = "LICENSE"}
dependencies = [
    "jax",
    "flax",
    "numpy",
    "prettytable"
]
requires-python = ">=3.8, <4"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

